weather.css
*{
	padding: 0;
	margin: 0;
	font-family: 'Catamaran', sans-serif;
}
body{
	background: #000;
	
}
/**** INTRO PAGE ******/
.intro {
	text-align: center;
	position: absolute;
	top: 50%;
	left: 30%
	transform: translate(-50%, -50%);
	width: 100%;
}
.intro span{
	text-transform: uppercase;
	display: block;
}
.text1{
	color: #fff;
	font-size: 60px;
	font-weight: 700;
	letter-spacing: 8px;
	margin-bottom: 20px;
	background: black;
	position: relative;
	animation: text 3s 1;


}
.text2{
	font-size: 30px;
	color: #41BBC1;
	margin-bottom: -40px;
	background: black;
	position: relative;

}
.searchbar{
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	background:#41BBC1;
	height: 40px;
	border-radius: 40px;
	padding: 10px;
	width: 150px;


}

@keyframes text {
	0%{
		color: black;
		margin-bottom: -40px;
	}
	30%{
		letter-spacing: 25px;
		margin-bottom: -40px;
	}
	85% {
		letter-spacing: 8px;
		margin-bottom: -40px;
	}
}
/***** SEARCH BAR *************/
.searchbar{
	position: relative;

}

/**** MAIN WEATHER PAGE ******/
.mainWrapper{
	width: 100vw;
	height: 90vw;
	display: none;
}
.mainContainer {
	perspective: 1000px;
    position: absolute;
    width: 550px;
    height: 320px;
    background: none;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -50%);
}
/****** Option for changing location *****/
.changeLocation {
	float: right;
    height: 40px;
    margin: 10px;
}
#inputLocation{
	height: 3em;
    width: 200px;
    border-radius: 10px;
}
#newLocation{
	height: 100%;
	width: 150px;
    border-radius: 10px;
}


/*** The main temp display w/flip card*****/
.theCard {
		position: relative;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		border-radius: 20px;
		transform-style: preserve-3d;
		transition: all 0.8s ease;
		
	}

	.theCard:hover {
		transform: rotateY(180deg);
	}

	.theFront {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		backface-visibility: hidden;
		overflow: hidden;
		/*background: #ffc728;*/
		background: rgba(51, 51, 51, 1);
		opacity: .3;
		color: #fff;
		text-align: center;
		border-radius: 20px;
		font-size: 18px;
		font-weight: bold;
	}

	.theBack {
		position: absolute;
		width: 100%;
		height: 100%;
		backface-visibility: hidden;
		/*background: #fafafa;*/
		background: rgba(51, 51, 51, 1);
		opacity: .3;
		color: #fff;
		transform: rotateY(180deg);
		text-align: center;
		border-radius: 20px;
		font-size: 18px;
		font-weight: bold;
		display: flex;
		flex-direction: row;
		justify-content: space-around;
		align-items: center;
	}
	#location, #backCardCity{
		font-size: 2.3em;
    	margin-bottom: 5px;
	}
	#timeAndDate, #description{
		margin: 0;
    	padding: 2px;
	}
	#currentTemp{
		margin: 0px;
    	font-size: 6em;
	}

	.theFront h5, .theBack h5 {
		padding-top: 5%;
		padding-left: 20px;
		padding-right: 20px;
	}

/**** 5 day forecast section ******/
.fiveDayFlex{
	position: absolute;
    top: 60%;
    left: 10%;
    right: 10%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 200px;
    align-items: center;
}
.day{
	background-color: rgba(51, 51, 51, 1);/*#333 but needed to not have opacity affect children*/
	border-radius: 10px;
    margin: 10px;
    min-width: 50px;
    min-height: 80px;
    opacity: .3;
    width: 150px;
    height: 200px;

}

